Support list functionality in attribute filter fields
Add filter fields for custom attributes without any object assigned